# interx-gov-intelligence

./: .coverage  .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  InterX_BD_CRM_v10_fresh_template.xlsx  Makefile  README.md  agent.md  app.py  check_collectors.py  colab_run.py  colab_runner.ipynb  conftest.py  docker-compose.yml  launch_dashboard.py  main.py  pyproject.toml  pytest.ini  requirements.txt  run_engine.py  streamlit_app.py  test_p1_p6.py
.github/workflows/: auto_collect.yml  ci.yml
.streamlit/: config.toml
archive/: colab_analysis.py  colab_patch_v3.py  colab_patch_v4.py  list_page_debug.html  list_script_debug.txt  main_v40_backup.py  main_v41_monolith.py  run_pipeline.py
archive/legacy_configs/config/: settings.py
archive/legacy_modules/core/: models.py
archive/legacy_modules/crawlers/: base.py  bizinfo_crawler.py  tp_crawlers.py
archive/legacy_modules/parsers/: attachment_handler.py  document_parser.py
archive/legacy_modules/storage/: db_client.py  sheet_client.py
archive/legacy_notebooks/notebooks/: run_colab.py
archive/legacy_scripts/scripts/: run_dashboard.py  run_pipeline.py
archive/migration_notes/: README.md
archive/orphaned_root/: README.md  keywords_profile.yaml  l3_rules.yaml  l3_strong_policy.py  priority_scoring_policy.py  score_notices.py  scoring.yaml
configs/: business_plan_templates.yaml  company_knowledge.yaml  competitors.yaml  logging.yaml  manager_rules.yaml  recurring.yaml  scoring.yaml  settings.yaml  sheets.yaml  sites.yaml
data/training/: won_projects.jsonl
platform/: app.py  colab_sync.py  database.py  start_server.py
platform/static/css/: style.css
platform/templates/: base.html  dashboard.html  notice_detail.html  notices.html  pipeline.html
scripts/: test_new_features.py  train_win_model.py
src/interx_engine/: cli.py
tests/fixtures/: generate_samples.py  sample_notice.docx
tests/integration/: test_collector_factory.py  test_pipeline_dry_run.py  test_settings.py
tests/unit/: test_ai_agent.py  test_business_plan.py  test_document_parser.py  test_embedding_clusterer.py  test_kpi_mapper.py  test_l3_strong_policy.py  test_notice_entity.py  test_notice_mapper.py  test_notice_mapper_full.py  test_parsing_accuracy.py  test_priority_scoring_policy.py  test_use_cases.py  test_validate_parsing.py  test_win_prediction.py
(+108 files in other folders)
